Fix: Wordwrap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,6 +24,7 @@ body {
     overflow-x: hidden;
     align-items: center;
     font-family: "Poppins", sans-serif;
+    word-wrap: break-word;
 }
 
 #profile {
